# Flowopt

./: .gitignore  Dockerfile  README.md  README_RUN.md  __init__.py  client.py  docker  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Flowopt_environment.py  __init__.py  app.py  requirements.txt
